<resources>
    <string name="app_name">MuniGo</string>
    <string name="login_image_description">Login image</string>
    <string name="login_details">Login Details</string>
    <string name="username_email_phone">Username, email &amp; phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="goo">Goo</string>
    <string name="or_sign_up_with">Or Sign up With</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
</resources>